--- a/talentboard-frontend/package.json
+++ b/talentboard-frontend/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query-devtools": "^5.77.2",
     "antd": "^5.25.3",
     "axios": "^1.9.0",
+    "framer-motion": "^12.15.0",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
