--- a/talentboard-frontend/package.json
+++ b/talentboard-frontend/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-auth": "5.0.0-beta.28",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
